--- a/supercar.css
+++ b/supercar.css
@@ -109,6 +109,7 @@
     /* height: 335px; */
     border-bottom: 10px solid rgb(138, 138, 182);
     margin-top: 20px;
+    background-color: rgb(255, 238, 228);
 }
 
 .content_product:hover {
@@ -145,4 +146,62 @@
 
 .edit-none {
     display: none;
+}
+button {
+    border: none;
+    outline: none;
+    padding: 5px 10px;
+    background-color: rgb(60, 158, 219);
+    color: rgb(239, 38, 11);
+    font-size: 17px;
+    margin: 10px 0;
+    border: 2px solid rgb(82, 151, 21);
+    border-radius: 5px;
+}
+button:hover {
+    background-color: rgb(129, 81, 241);
+}
+.form-add {
+    background-color: rgb(219, 219, 219);
+    box-shadow: 0 0 10px rgb(193, 193, 193);
+}
+.form-add>div>label {
+    float: left;
+    margin-right: 50px;
+    margin-bottom: 12px;
+}
+.form-add>div>input {
+    float: right;
+    width: 900px;
+    padding: 1px 0 1px 2px;
+    margin-bottom: 10PX;
+}
+.form-add>div:last-child {
+    width: 175px;
+    margin: 0 auto;
+    /* height: 30px; */
+}
+.form-add>div>button {
+    text-align: center;
+}
+.search-bar {
+
+    position: relative;
+    right: -810px;
+    top: -4px;
+
+    
+}
+
+.search-bar input {
+    width: 200px;
+    padding: 4px;
+    outline: none;
+    
+}
+
+.search-bar i {
+
+    padding-left: 4px;
+
 }
